--- a/SoldierTrackingAssesment/SoldierTrackingAssesment.App.csproj
+++ b/SoldierTrackingAssesment/SoldierTrackingAssesment.App.csproj
@@ -8,4 +8,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Infra.SoldierTrackingAssesment\Infra.SoldierTrackingAssesment.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
 </Project>
